--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -65,7 +65,7 @@ radius = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = true
+bottom = false
 
 line-size = 6pt
 
@@ -80,7 +80,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.flamingo}
 
-font-0 = MesloLGS Nerd Font Mono:size=12;6
+font-0 = MesloLGS Nerd Font Mono:size=14;6
 
 modules-left = xworkspaces xwindow
 modules-right = pulseaudio battery memory cpu wlan date
