--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -16,6 +16,14 @@ exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 exec --no-startup-id i3-msg 'workspace 2; exec chromium'
 exec --no-startup-id i3-msg 'workspace 3; exec discord'
 exec --no-startup-id i3-msg 'workspace 4; exec spotify'
+exec --no-startup-id i3-msg 'workspace 5; exec pavucontrol'
+
+assign [class="Alacritty"] workspace 1
+assign [class="Chromium"] workspace 2
+assign [class="discord"] workspace 3
+assign [class="Spotify"] workspace 4
+assign [class="pavucontrol"] workspace 5
+
 bindsym $mod+space exec rofi -show combi
 
 #Hide window title bar
@@ -193,7 +201,7 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
-bindsym $mod+114 mode "resize"
+bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
