--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -65,7 +65,7 @@ radius = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = false
+bottom = true
 
 line-size = 6pt
 
