--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -83,8 +83,7 @@ separator-foreground = ${colors.flamingo}
 font-0 = MesloLGS Nerd Font Mono:size=14;6
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
-
+modules-right = date wlan battery pulseaudio
 cursor-click = pointer
 cursor-scroll = ns-resize
 
@@ -92,7 +91,7 @@ enable-ipc = true
 
 ; wm-restack = generic
 ; wm-restack = bspwm
-; wm-restack = i3
+wm-restack = i3
 
 ; override-redirect = true
 
@@ -177,54 +176,56 @@ label = %percentage:2%%
 
 [module/battery]
 type = internal/battery
+battery = BAT1
+adapter = ACAD
+full-at = 99
+
+format-charging = <animation-charging> <label-charging>
+format-discharging = <ramp-capacity> <label-discharging>
+format-full = 󰁹 <label-full>
 format-prefix = "BAT "
 format-prefix-foreground = ${colors.primary}
-full-at = 99
-format-charging = <animation-charging> <label-charging>
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
+animation-charging-0 = 󰂎
+animation-charging-1 = 󰁼
+animation-charging-2 = 󰁾
+animation-charging-3 = 󰂀
+animation-charging-4 = 󰁹
+
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 animation-charging-foreground = ${colors.peach}
-format-discharging = <ramp-capacity> <label-discharging>
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-low-at = 5
-battery = BAT1
-adapter = ACAD
-poll-interval = 5
+ramp-capacity-0 = 󰂎
+ramp-capacity-1 = 󰁼
+ramp-capacity-2 = 󰁾
+ramp-capacity-3 = 󰂀
+ramp-capacity-4 = 󰁹
+low-at = 30
+poll-interval = 3
 
 [network-base]
 type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+interval = 3
+format-connected = %{A1:networkmanager_dmenu:}󰖩 <label-connected>%{A}
+format-disconnected = %{A1:networkmanager_dmenu:}󰖪 %{A}
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid%
+label-connected = %essid%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %local_ip%
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = "%a %b %d, %Y"
+time = %H:%M
 
-label = %date%
+label = %time% %date%
 label-foreground = ${colors.primary}
 
 [settings]
