--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -27,6 +27,7 @@ assign [class="pavucontrol"] workspace 5
 bindsym $mod+space exec rofi -show combi
 bindsym $mod+Tab exec rofi -show window
 bindsym $mod+period exec rofi -show emoji
+bindsym $mod+w exec ~/bin/rofi-wifi-menu.sh
 
 # Screenshot
 bindsym $mod+Shift+P exec --no-startup-id maim "/home/parmesean/Pictures/$(date).png"
@@ -127,7 +128,7 @@ bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+#bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
