--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,6 +11,7 @@
 
 set $mod Mod4
 exec --no-startup-id picom
+exec_always --no-startup-id feh --bg-scale /home/parmesean/Pictures/Wallpapers/flatppuccin.png
 exec_always --no-startup-id killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 exec --no-startup-id i3-msg 'workspace 2; exec brave'
