add rofi w/ emoji and wifi menu

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -35,7 +35,10 @@ monitor=eDP-1,preferred,auto,1.0
 # Set programs that you use
 $terminal = alacritty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show combi
+$emoji-menu = rofi -show emoji
+$window-menu = rofi -show window
+$wifi-menu = rofi-wifi-menu
 
 
 #################
@@ -50,6 +53,10 @@ $menu = wofi --show drun
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = waybar
+exec-once = [workspace 1 silent] alacritty
+exec-once = [workspace 2 silent] brave
+exec-once = [workspace 3 silent] discord
+exec-once = [workspace 4 silent] spotify
 
 xwayland {
     force_zero_scaling = true
@@ -200,7 +207,10 @@ bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, Space, exec, $menu
+bind = $mainMod, Period, exec, $emoji-menu
+bind = $mainMod, Tab, exec, $window-menu
+bind = $mainMod, W, exec, $wifi-menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
