modified rofi config and styles

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=eDP-1,preferred,auto,1.0
 # Set programs that you use
 $terminal = alacritty
 $fileManager = dolphin
-$menu = rofi -show combi
+$menu = rofi -show drun
 $emoji-menu = rofi -show emoji
 $window-menu = rofi -show window
 $wifi-menu = rofi-wifi-menu
