add window rules

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -57,6 +57,12 @@ exec-once = [workspace 1 silent] alacritty
 exec-once = [workspace 2 silent] brave
 exec-once = [workspace 3 silent] discord
 exec-once = [workspace 4 silent] spotify
+exec-once = gnome-keyring-daemon -sd
+
+windowrulev2 = workspace 1, class:^(Alacritty)$
+windowrulev2 = workspace 2, class:^(Brave-browser)$
+windowrulev2 = workspace 3, class:^(discord)$
+windowrulev2 = workspace 4, class:^(Spotify)$
 
 xwayland {
     force_zero_scaling = true
@@ -206,7 +212,7 @@ bind = $mainMod, return, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, Period, exec, $emoji-menu
 bind = $mainMod, Tab, exec, $window-menu
