add hyprlock and hyprpaper

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -57,6 +57,7 @@ exec-once = [workspace 1 silent] alacritty
 exec-once = [workspace 2 silent] brave
 exec-once = [workspace 3 silent] discord
 exec-once = [workspace 4 silent] spotify
+exec-once = hyprpaper
 exec-once = gnome-keyring-daemon -sd
 
 windowrulev2 = workspace 1, class:^(Alacritty)$
@@ -210,7 +211,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, Space, exec, $menu
