--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,9 +1,12 @@
 {
   "position": "top",
   "modules-left": ["hyprland/workspaces"],
-  "modules-right": ["network", "pulseaudio", "battery", "clock"],
+  "modules-center": [
+      "hyprland/window",
+      ],
+  "modules-right": ["network", "pulseaudio", "battery", "clock", "custom/powermenu"],
   "clock": {
-    "format": "<span foreground='#f5c2e7'>   </span>{:%a %B %d, %Y %H:%M}",
+    "format": "<span foreground='#f5c2e7'> </span>{:%a %B %d, %Y %H:%M}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
   },
   "battery": {
@@ -41,5 +44,10 @@
       "car": "",
       "default": ["", ""]
     }
-  }
+  },
+  "custom/powermenu": {
+      "format": "",
+      "tooltip": false,
+      "on-click": "exec wlogout -p layer-shell",
+  },
 }
