add clipse w/ catppuccin theme

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -58,12 +58,8 @@ exec-once = [workspace 2 silent] brave
 exec-once = [workspace 3 silent] discord
 exec-once = [workspace 4 silent] spotify
 exec-once = hyprpaper
+exec-once = clipse -listen
 exec-once = gnome-keyring-daemon -sd
-
-windowrulev2 = workspace 1, class:^(Alacritty)$
-windowrulev2 = workspace 2, class:^(Brave-browser)$
-windowrulev2 = workspace 3, class:^(discord)$
-windowrulev2 = workspace 4, class:^(Spotify)$
 
 xwayland {
     force_zero_scaling = true
@@ -270,6 +266,9 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
+# Clipboard
+bind = $mainMod, V, exec, alacritty --class clipse -e clipse
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -284,3 +283,9 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = workspace 1, class:^(Alacritty)$
+windowrulev2 = workspace 2, class:^(Brave-browser)$
+windowrulev2 = workspace 3, class:^(discord)$
+windowrulev2 = workspace 4, class:^(Spotify)$
+windowrulev2 = float, class:(clipse)
+windowrulev2 = size 622 652, class:(clipse)
