add hyprshot binds for screenshots

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -269,6 +269,11 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # Clipboard
 bind = $mainMod, V, exec, alacritty --class clipse -e clipse
 
+# Screenshot a window, monitor, region
+bind = $mainMod, PRINT, exec, hyprshot -m window -o ~/Pictures/
+bind = , PRINT, exec, hyprshot -m output -o ~/Pictures/
+bind = $mainMod SHIFT, PRINT, exec, hyprshot -m region -o ~/Pictures/
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
